tests/NormalTests/paczka1/small_fuzzy/65122193.err
Error in line 11: ubk63R S372 69,80
Error in line 8: ubk63R A120 98,9
Error in line 16: MfvYH S372 -2,0
